OpenJMLTest/releaseTests/testPath2/expected
../testfiles/testPath/data/TestPath.java:3: error: cannot find symbol
    //@ requires z ; // BAD
                 ^
  symbol:   variable z
  location: class TestPath
Note: $SPECS/java5/java/util/Arrays.jml uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
